--- a/index.css
+++ b/index.css
@@ -62,9 +62,6 @@ nav {
           animation: fadeIn 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) 1s both;       
 }
 
-.email-on-side p:hover {
-  opacity: 1;
-}
 
 .email-on-side p {
   opacity: 0.5;
@@ -401,8 +398,8 @@ cursor: pointer;
     right: -4.5rem;
     bottom: 6rem;
     font-size: 1.5rem;
-    -webkit-animation: fadeIn 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) 4s both;
-            animation: fadeIn 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) 4s both;       
+    -webkit-animation: fadeIn 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) 1s both;
+            animation: fadeIn 1s cubic-bezier(0.390, 0.575, 0.565, 1.000) 1s both;       
   }
   
   .lingo-icons img {
@@ -464,6 +461,7 @@ cursor: pointer;
   .wheelCogAnimation, .wheelCogLarge, .wheelCogMedium, .wheelCogSmall, .lingo-icons, .email-on-side {
     display: none;
   }
+
   nav {
     background-color: #e4d5b9;
     z-index: 25;
@@ -483,6 +481,7 @@ cursor: pointer;
     font-size: 2.5rem;
     font-family: monospace;
     text-align: center;
+    background: none;
   }
 
   ul {
@@ -617,10 +616,25 @@ cursor: pointer;
 }
 
 @media screen and (max-width: 1024px) and (orientation:landscape) {
+
+  .greetingText {
+    margin-top: 6rem;
+  }
+
+  .greetingText1 {
+    text-underline-offset: 0;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
   
   li {
     font-size: 1.5rem;
+    background: none;
   }
+
+  
 
   .logoTransparentNav {
     width: 3rem;
