--- a/index.css
+++ b/index.css
@@ -52,10 +52,33 @@ nav {
   justify-content: center;
   align-items: center;
   margin-top: 2.5rem;
+  flex-direction: column;
 }
 
-.footer p {
+.contact-me {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.email-card {
+  opacity: 0;
+  z-index: 10;
+  position: relative;
+  margin-top: 6rem;
+  font-size: 2rem;
+  color: white;
+  background-color: rgb(179, 48, 255);
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+.email-card p {
+  margin: 2rem 5rem;
+}
+
+.footer-text {
   font-size: 1rem;
+  margin-top: 3rem;
 }
 
 .intro {
@@ -375,11 +398,11 @@ li {
   }
 
   .logoTransparentNav {
-    width: 5rem;
+    width: 4rem;
     height: auto;
     position: absolute;
     left: 3rem;
-    top: 0.8rem;
+    top: 1.2rem;
     opacity: 0.7;
     -webkit-transition: all .2s ease-in-out;
             transition: all .2s ease-in-out;
@@ -457,7 +480,7 @@ li {
 
 @media screen and (max-width: 768px) {
 
-  .wheelCogAnimation, .wheelCogLarge, .wheelCogMedium, .wheelCogSmall, .lingo-icons, .email-on-side {
+  .wheelCogAnimation, .wheelCogLarge, .wheelCogMedium, .wheelCogSmall, .email-on-side {
     display: none;
   }
 
@@ -534,7 +557,7 @@ li {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 7rem;
+    margin-top: 4rem;
     margin-left: 0;
     margin-right: 0;
   }
@@ -562,8 +585,18 @@ li {
     margin-top: -2rem;
   }
 
+
+
   .logoTransparentNav {
     display: none;
+  }
+
+  .lingo-icons {
+    flex-direction: row;
+    position: relative;
+    justify-content: center;
+    left: 0;
+    margin-top: 3rem;
   }
 }
 
@@ -606,7 +639,14 @@ li {
     margin-top: -2rem;
   }
 
+  .email-card {
+    width: 100%;
+    text-align: center;
+  }
 
+  .email-card p {
+    margin: 2rem 0rem;
+  }
 }
 
 @media screen and (max-width: 1023px) and (orientation:landscape) {
